summer-jaeb/tests/compile_fail/unknown_attr.stderr
error: unknown attribute `unknown`, expected one of: retries, retry_strategy, retry_base_ms, retry_max_ms, dead_letter, name
  --> tests/compile_fail/unknown_attr.rs:10:18
   |
10 | #[event_listener(unknown = 42)]
   |                  ^^^^^^^

warning: unused import: `jaeb::HandlerResult`
 --> tests/compile_fail/unknown_attr.rs:4:5
  |
4 | use jaeb::HandlerResult;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
